# garbled-snark-verifier

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: checks.yml  gate-count-badges.yml
.scripts/: garble_monitor.py  gates_monitor.py  test_log_parser.bash
circuit_component_macro/: Cargo.toml  README.md
circuit_component_macro/src/: gen_bn_wrapper.rs  gen_wrapper.rs  lib.rs  parse_sig.rs
circuit_component_macro/tests/: integration.rs
circuit_component_macro/tests/fail/: self_parameter.rs  self_parameter.stderr  too_many_inputs.rs  too_many_inputs.stderr
circuit_component_macro/tests/success/: ignore_keeps_order.rs  no_inputs.rs  one_input.rs  sixteen_inputs.rs  three_inputs.rs  two_inputs.rs
doc/: garbling-instructions.md
examples/: fq_inverse_many.rs  g1_multiplexer_flame.rs  groth16_cut_and_choose.rs  groth16_garble.rs  groth16_gc_gate_count.rs  groth16_mpc.rs  pairing_gate_counts.rs  simple_example.rs
src/: ciphertext_hasher.rs  garbled_groth16.rs  groth16_proof_api.rs  hashers.rs  hw.rs  lib.rs  logging.rs  storage.rs
src/cac/: adaptor_sigs.rs  mod.rs  utils.rs  vsss.rs
src/circuit/: arity_check.rs  ciphertext_source.rs  circuit_context_trait.rs  commitment.rs  component_key.rs  component_meta.rs  evaluation.rs  finalized.rs  garble_evaluate_integration_test.rs  garble_integration_test.rs  garbling.rs  gate_source.rs  mod.rs  modes.rs  offcircuit_param.rs  streaming_mode.rs  structure.rs  test.rs  test_util.rs
src/circuit/modes/: evaluate_mode.rs  execute_mode.rs  garble_mode.rs
src/circuit/modes/evaluate_mode/: evaluate_test.rs
src/circuit/modes/garble_mode/: garble_test.rs  halfgates_garbling.rs
src/circuit/streaming/: arity_check.rs  arity_tests.rs  cache.rs  circuit_context_trait.rs  component_meta.rs  component_template_pool.rs  components.rs  garble_evaluate_integration_test.rs  garble_integration_test.rs  into_wire_list.rs  mod.rs  modes.rs  streaming_mode.rs  test_macro.rs
src/circuit/streaming/modes/: evaluate_mode.rs  execute_mode.rs  garble_mode.rs
src/circuit/streaming/modes/evaluate_mode/: evaluate_test.rs
src/circuit/streaming/modes/garble_mode/: garble_test.rs
src/core/: delta.rs  gate.rs  gate_type.rs  mod.rs  progress.rs  s.rs  wire.rs
src/core/gate/: mod.rs  tests.rs
src/core/gate/garbling/: aes_ni.rs  aes_ni_test.rs  hashers.rs  mod.rs  tests.rs
src/cut_and_choose/: ciphertext_repository.rs  evaluator.rs  garbler.rs  groth16.rs  mod.rs  tests.rs
src/gadgets/: basic.rs  groth16.rs  mod.rs
src/gadgets/bigint/: add.rs  cmp.rs  mod.rs  mul.rs
src/gadgets/bn254/: final_exponentiation.rs  fp254impl.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  mod.rs  montgomery.rs  pairing.rs  test_macros.rs
src/gadgets/hash/: blake3.rs
src/hashers/: aes_ni.rs  mod.rs
tests/: fq12_mul_e2e.rs  garbler_evaluator_connection.rs  streaming_evaluate.rs  tmp_dbg.rs
