[package]
name = "garbled-snark-verifier"
version = "0.2.0"
edition = "2024"
authors = ["BitVM Alliance"]
license = "GPL-3.0-only"
repository = "https://github.com/BitVM/garbled-snark-verifier"
readme = "README.md"
rust-version = "1.89"
keywords = [
    "garbled-circuit",
    "cryptography",
    "progcrypto",
    "groth16",
]
description = "Garbled-circuit SNARK verifier using Groth16 (BN254), with reusable gadgets and ergonomic circuit composition."

[dependencies]
aes = "0.8"
ark-bn254 = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-snark = "0.5.1"
ark-std = "0.5.0"
bitvec = "1.0.1"
blake3 = { version = "1.6.1", features = ["traits-preview"] }
circuit_component_macro = { path = "circuit_component_macro" }
crossbeam = "0.8"
digest = "0.10"
itertools = "0.14.0"
log = "0.4.27"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8" # using old version for consistency with ark
rand_chacha = "0.3" # using old version for consistency with ark
rayon = "1.10.0"
slab = "0.4.11"
thiserror = "2.0.12"

[dev-dependencies]
ark-ec = "0.5.0"
ark-relations = "0.5.0"
env_logger = "0.11"
serde_json = "1.0"
test-log = "0.2.8"

[profile.flamegraph]
inherits = "release"
debug = true           # Essential for symbol resolution
codegen-units = 1      # Better inlining visibility
lto = "fat"           # Cross-crate optimization
panic = "abort"       # Faster execution, smaller binary

[package.metadata.cargo-udeps.ignore]
# `cargo-husky` is intentionally present for git hooks and should be ignored by udeps
development = ["cargo-husky"]
normal = ["aes"]
