[package]
name = "garbled-snark-verifier"
version = "0.3.0"
edition = "2024"
authors = ["BitVM Alliance"]
license = "GPL-3.0-only"
repository = "https://github.com/BitVM/garbled-snark-verifier"
readme = "README.md"
rust-version = "1.90"
keywords = [
    "garbled-circuit",
    "cryptography",
    "progcrypto",
    "groth16",
]
description = "Garbled-circuit SNARK verifier using Groth16 (BN254), with reusable gadgets and ergonomic circuit composition."

[features]
default = ["tracing_max_level", "tracing_scopes"]
tracing_max_level = ["tracing/max_level_trace", "tracing/release_max_level_info"]
tracing_scopes = []

[dependencies]
aes = "0.8"
ark-bn254 = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-snark = "0.5.1"
ark-std = "0.5.0"
bitvec = "1.0.1"
blake3 = { version = "1.6.1", features = ["traits-preview"] }
circuit_component_macro = { path = "circuit_component_macro" }
crossbeam = "0.8"
digest = "0.10"
itertools = "0.14.0"
tracing = { version = "0.1.41", features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "registry"] }
tracing-log = "0.2"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8" # using old version for consistency with ark
rand_chacha = "0.3" # using old version for consistency with ark
rayon = "1.10.0"
core_affinity = "0.8"
num_cpus = "1.16"
slab = "0.4.11"
thiserror = "2.0.12"
serde_json = "1.0"
serde = { version = "1.0.225", features = ["derive"] }
ark-serialize = "0.5.0"

[dev-dependencies]
ark-ec = "0.5.0"
ark-relations = "0.5.0"
serde_json = "1.0"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }

# Install Git hooks via cargo-husky
[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[profile.flamegraph]
inherits = "release"
debug = true           # Essential for symbol resolution
codegen-units = 1      # Better inlining visibility
lto = "fat"           # Cross-crate optimization
panic = "abort"       # Faster execution, smaller binary

[package.metadata.cargo-udeps.ignore]
# `cargo-husky` is intentionally present for git hooks and should be ignored by udeps
development = ["cargo-husky"]
normal = ["aes"]
