[package]
name = "circuit_component_macro"
version = "0.1.0"
edition = "2024"
authors = ["BitVM Alliance"]
license = "GPL-3.0-only"
repository = "https://github.com/BitVM/garbled-snark-verifier"
rust-version = "1.89"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }

[dev-dependencies]
trybuild = "1.0"
